@@ -1,8 +1,9 @@
 pbuilder (0.167) UNRELEASED; urgency=low
 
-  * 
-
- -- Junichi Uekawa <dancer@debian.org>  Tue, 17 Apr 2007 09:19:18 +0900
+  * examples/execute_installtest.sh: update to support multiple packages
+    as apt target.
+  
+ --
 
 pbuilder (0.166) unstable; urgency=low
 
