@@ -1,3 +1,7 @@
+2007-04-22  Junichi Uekawa  <dancer@debian.org>
+
+	* examples/execute_installtest.sh: update install test so that it can handle more than one packages.
+
 2007-04-17  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/rules: remove amd64 from build rules.
